--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
 	<link rel="icon"  type="image/png"  href="images/favicon.ico" />
 	<title>TechSummit'19 | Techkriti</title>
-	<meta name="author" content="Amar Prakash Pandey">
+	<meta name="author" content="Techkriti">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/ae7ffc7b99.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900" rel="stylesheet">
@@ -39,8 +39,8 @@
 
 	<Section class="section-one">
 		<div class="navbar" >
-			<img class="logo-main" src="./images/logo-main.png">
-			<i class="navicon fa fa-bars" aria-hidden="true">TechSummit</i>		
+			<!--<img class="logo-main" src="./images/logo-main.png">-->
+			<i class="navicon fa fa-bars" aria="true">TechSummit</i>		
 		</div>
 		
 		<div class="info-container">
