--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
-	<link rel="icon"  type="image/png"  href="images/favicon.ico" />
+	<link rel="shortcut icon" type="image/png" href="images/tech.png" />
 	<title>TechSummit'19 | Techkriti</title>
 	<meta name="author" content="Amar Prakash Pandey">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/ae7ffc7b99.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900" rel="stylesheet">
 	<link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 	<script>
 	function changeText1()
 	{
@@ -33,14 +34,17 @@
 	html {
   scroll-behavior: smooth;
 }
+.fa-info-circle:hover{
+	color:white; 
+}
 </style>
 </head>
 <body>
 
 	<Section class="section-one">
 		<div class="navbar" >
-			<img class="logo-main" src="./images/logo-main.png">
-			<i class="navicon fa fa-bars" aria-hidden="true">TechSummit</i>		
+			<!-- <img class="logo-main" src="./images/logo-main.png"> -->
+			<i class="navicon fa fa-bars" aria-hidden="true">TechSummit</i>	 	
 		</div>
 		
 		<div class="info-container">
@@ -48,8 +52,8 @@
 			<p class="p-date"><strong>8 - 10 March 2019</strong></p>
 			<p>Industry 4.0</p>
 			<p class="p-description">The Ultimate Customer Support Experience Event</p>
-			<div class="button-container"><button class="circular">REGISTER NOW</button></div>
-			<div class="button-container"><a href="#Speakers"> <button class="circular">See LineUp</button> </a></div>
+			<div class="button-container"><button class="circular"><i class="fa fa-user-plus" aria-hidden="true"></i> | REGISTER NOW</button></div>
+			<div class="button-container"><a href="#Speakers"> <button class="circular"><i class="fa fa-comments" aria-hidden="true"></i> | SEE LINEUP</button> </a></div>
 		</div>
 	</Section>
 
@@ -86,7 +90,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">01.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading" >Ensure valuable takeaways. <button class="btn btn-info" onclick='changeText1()'></button> </span>
+						<span class="multiple-repeat-heading" >Ensure valuable takeaways <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText1()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -97,7 +101,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">02.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading">Build your network <button class="btn btn-info" onclick='changeText2()'></button></span>
+						<span class="multiple-repeat-heading">Build your network <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText2()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -108,7 +112,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">03.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading">Your time and attention are precious <button class="btn btn-info" onclick='changeText3()'></button></span>
+						<span class="multiple-repeat-heading">Your time and attention are precious <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText3()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -119,7 +123,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">04.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading">Once a year <button class="btn btn-info" onclick='changeText4()'></button></span>
+						<span class="multiple-repeat-heading">Once a year <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText4()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
