--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<Section class="section-one">
 		<div class="navbar" >
 			<img class="logo-main" src="./images/logo-main.png">
-			<i class="navicon fa fa-bars" aria-hidden="true">TechSummit</i>		
+			<i class="navicon " aria-hidden="true">TechSummit</i>		
 		</div>
 		
 		<div class="info-container">
