--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 				
 				<h3 style="">Techkriti | IIT Kanpur</h3>
 			</div> -->
-			<div class="footer">TechSummit summit is bought to you by Techkriti. All right reserved.</div>
+			<div class="footer">TechSummit is bought to you by Techkriti. All right reserved.</div>
 		</div>
 		<div class="right-top"></div>
 		<div class="left-bottom"></div>
