--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
-	<link rel="icon"  type="image/png"  href="images/favicon.ico" />
+	<link rel="shortcut icon" type="image/png" href="images/tech.png" />
 	<title>TechSummit'19 | Techkriti</title>
 	<meta name="author" content="Amar Prakash Pandey">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/ae7ffc7b99.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900" rel="stylesheet">
 	<link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 	<script>
 	function changeText1()
 	{
@@ -33,14 +34,17 @@
 	html {
   scroll-behavior: smooth;
 }
+.fa-info-circle:hover{
+	color:rgb(214, 69, 127); 
+}
 </style>
 </head>
 <body>
 
-	<Section class="section-one">
+	<Section class="section-one">  <!--Landing jumbotron-->
 		<div class="navbar" >
-			<img class="logo-main" src="./images/logo-main.png">
-			<i class="navicon " aria-hidden="true">TechSummit</i>		
+			<!-- <img class="logo-main" src="./images/logo-main.png"> -->
+			<i class="navicon" aria-hidden="true">TechSummit</i>	 	
 		</div>
 		
 		<div class="info-container">
@@ -48,12 +52,12 @@
 			<p class="p-date"><strong>8 - 10 March 2019</strong></p>
 			<p>Industry 4.0</p>
 			<p class="p-description">The Ultimate Customer Support Experience Event</p>
-			<div class="button-container"><button class="circular">REGISTER NOW</button></div>
-			<div class="button-container"><a href="#Speakers"> <button class="circular">See LineUp</button> </a></div>
+			<div class="button-container"><button class="circular"><i class="fa fa-user-plus" aria-hidden="true"></i> | REGISTER NOW</button></div>
+			<div class="button-container"><a href="#Speakers"> <button class="circular"><i class="fa fa-comments" aria-hidden="true"></i> | SEE LINEUP</button> </a></div>
 		</div>
 	</Section>
 
-	<section class="section-two row">
+	<section class="section-two row"> <!--Workshops-->
 		<div class="col-sm-6 two-left">
 			<div class="desc-div left">
 				<div class="side-tag">
@@ -86,7 +90,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">01.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading" >Ensure valuable takeaways. <button class="btn btn-info" onclick='changeText1()'></button> </span>
+						<span class="multiple-repeat-heading" >Ensure valuable takeaways <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText1()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -97,7 +101,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">02.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading">Build your network <button class="btn btn-info" onclick='changeText2()'></button></span>
+						<span class="multiple-repeat-heading">Build your network <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText2()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -108,7 +112,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">03.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading">Your time and attention are precious <button class="btn btn-info" onclick='changeText3()'></button></span>
+						<span class="multiple-repeat-heading">Your time and attention are precious <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText3()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -119,7 +123,7 @@
 				<div class="multiple-repeat">
 					<div class="multiple-repeat-number">04.</div>
 					<div class="mod-content">
-						<span class="multiple-repeat-heading">Once a year <button class="btn btn-info" onclick='changeText4()'></button></span>
+						<span class="multiple-repeat-heading">Once a year <i class="fa fa-info-circle" aria-hidden="true" onclick="changeText4()"></i></span>
 						<div class="gap10px"></div>
 						<p class="multiple-repeat-info">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -131,75 +135,7 @@
 		</div>
 	</section>
 
-	<!-- <section class="section-three">
-		<div class="draw-line-ver"></div>
-
-		<div class="video-play-button">
-			<span class="text">WATCH </span>
-			<button><i class="fa fa-play-circle-o" aria-hidden="true"></i></button>
-			<span class="text">VIDEO</span>
-		</div>
-
-		<div class="side-tag">
-			<div class="draw-line"></div>
-			<span>13 14 APRIL 2017</span>
-		</div>
-	</section>
- -->
-	<!-- <section class="section-four">
-		<div class="card-view">
-			<div class="draw-line"></div>
-			<div class="float-text xmin wiggle">
-				<h1>Why Journey 2017?</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip. </p>
-			</div>
-			<div class="left-up-image bound">
-				<img src="./images/img34.png">
-			</div>
-			<div class="float-text settings xmin">
-				<h1>When and where is Journey</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-				</p>
-			</div>
-			<div class="right-up-image bound">
-				<img src="./images/img33.png">
-			</div>
-
-			<div class="float-text settings-one xmin">
-				<h1>What we're covering</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-				consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-				</p>
-			</div>
-
-			<div class="center-up-image bound">
-				<img src="./images/img35.png">
-			</div>
-
-			<div class="float-text settings-two xmin">
-				<h1>Who will be there</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-				consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-				</p>
-			</div>
-
-			<div class="float-text settings-three xmin">
-				<h1>Why attend</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-				consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-				</p>
-			</div>
-		</div>
-		<div class="card-view ghost">1</div>
-	</section> -->
-
-	<section class="section-five" id="Speakers">
+	<section class="section-five" id="Speakers"> <!--Speakers-->
 		<div class="wrapper">
 			<div class="line-draw"></div>
 			<div class="main-heading">
@@ -258,7 +194,7 @@
 		<div class="wrapper ghost">1</div>
 	</section>
 
-	<section class="section-six">
+	<section class="section-six"> <!--Schedule-->
 		<div class="line-draw"></div>
 		<div class="schedule-dates">
 			<h4 class="head4">Schedule</h4>
@@ -317,7 +253,7 @@
 		</div>
 	</section>
 
-	<section class="section-seven">
+	<section class="section-seven"> <!--FAQ-->
 		<div class="upper-base">
 			<div class="line-draw"></div>
 			<div class="for-info-image"></div>
@@ -357,7 +293,7 @@
 		<div class="images-show"></div>
 	</section>
 
-	<section class="section-eight">
+	<section class="section-eight"> <!--Sponsors-->
 		<div class="wrap-sponsers">
 			<h2>Our awesome sponsers</h2>
 			<div class="row">
@@ -399,10 +335,10 @@
 				</div>
 			</div>
 			<div class="tagline-info">
-				Want to get involved and be a sponser,<br>
+				Want to get involved and be a sponsor,<br>
 				ready and join us!
 			</div>
-			<div class="button-container"><button class="circular">BECOME A SPONSER</button></div>
+			<div class="button-container"><button class="circular">BECOME A SPONSOR</button></div>
 			<div class="side-tag">
 				<div class="draw-line"></div>
 				<span>AN EVENT BY TECHKRITI</span>
@@ -410,11 +346,11 @@
 		</div>
 	</section>
 
-	<section class="section-last">
+	<section class="section-last"> <!--Footer-->
 		<div class="upper-crust">
 			<div class="line-draw"></div>
 			<div class="journey-image">
-				<img src="images/img40.png">
+				<img src="images/tech.png">
 				<h1 style="color: white;">&nbsp; Techkriti  &nbsp; &nbsp;IIT Kanpur</h1>
 			</div>
 			<!-- <div class="col-lg-4 col-md-4 col-sm-6" style=" text-align: center;">
@@ -424,7 +360,7 @@
 				
 				<h3 style="">Techkriti | IIT Kanpur</h3>
 			</div> -->
-			<div class="footer">TechSummit is bought to you by Techkriti. All right reserved.</div>
+			<div class="footer">TechSummit is bought to you by Techkriti. All rights reserved.</div>
 		</div>
 		<div class="right-top"></div>
 		<div class="left-bottom"></div>
@@ -434,6 +370,6 @@
 	<script src="js/script.js"></script>
 	<script type="text/javascript" src="particles.js"></script>
 <script type="text/javascript" src="app.js"></script>
-	<!-- <script src="https://use.fontawesome.com/ae7ffc7b99.js"></script> -->
+<!-- <script src="https://use.fontawesome.com/ae7ffc7b99.js"></script> -->
 </body>
 </html>
